# shipment_planner

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  litellm.config.yaml  pyproject.toml
app/: main.py  schemas.py
app/agents/: analytics.py  base.py  dev.py  knowledge.py
app/api/: routes.py
app/core/: basic_auth.py  config.py  language.py  llm.py  router.py
app/services/: csv_boxes.py  dev_tools.py  rag.py  shipment_planner.py  sql.py  xlsx_export.py
app/static/: app.js  index.html  styles.css
docs/: ARCHITECTURE.md  MVP_STATUS.md
scripts/: init_pgvector.sql  install_ollama_windows.ps1  launch_opencode.ps1  pull_ollama_model.ps1  run_local.ps1
tests/: test_basic_auth.py  test_csv_boxes.py  test_csv_example_planning.py  test_csv_upload_api.py  test_csv_upload_limits.py  test_language.py  test_router.py  test_shipment_planner.py
