[project]
name = "ai-platform-mvp"
version = "0.1.0"
description = "Local MVP for a multi-agent AI platform."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.4.0",
  "httpx>=0.27.0",
  "python-multipart>=0.0.9",
  "langgraph>=0.2.0",
  "pyodbc>=5.1.0",
]

[project.scripts]
app = "app.main:app"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
